chore: Upgrade JDK version and more (#2)
* Ensure compatibility with Java 11 and JavaFX 11, upgrade dependencies
* Compile shared library to Java 8
* Upgrade to Gradle 5.6
* Build on Travis with Ubuntu bionic + openjdk11